- Updated Italian translations - Credit PACIOCS

Improvements:
- Add post-occurrence events matching all existing events which are only called on success - Credit svaningelgem
-- Some events have been renamed and the existing event is now Depreciated and will be removed in a future release. This includes:
-- PrePurgeEvent -> PurgeEvent to match other events
-- `TeamMessageEvent` -> `PostTeamSendMessageEvent` for clarity as all over Post events include 'Post'
-- `TeamPreMessageEvent` -> `TeamSendMessageEvent` Once again to match existing patterns
- Added option to configure the table name prefix in SQL so multiple servers can point at the same SQL server - Credit gaboss44

Bug Fixes:
- Attempt at fixing /team kick not working offline players in some cases - Credit svaningelgem
- Fixed issue with the team.yaml file being reset - Credit booksaw

Code improvements:
- Many instances of code refactoring and improvement and re-formatting - Credit svaningelgem
- Refactored code to make use of Lombok to avoid boilerplate code - Credit svaningelgem
- Automated dependency updating - Credit svaningelgem
- Replacement of Caffeine dependency with custom implementation to reduce filesize - Credit svaningelgem

4.13.0

Features:
- Added [minimessage](https://docs.advntr.dev/minimessage/index.html) support (#748) - Credit gaboss44
- Added /team anchor, a feature that allows players to respawn at their team's home location if they desire (#738) - Credit gaboss44

Bug Fixes:
- Major optimisation of the chest management module of BetterTeams, this should provide a significant performance improvement (#768, #689) - Credit RVSkeLe
- Fixed a bug causing discord webhook messages to be sent twice (#757) - Credit svaningelgem
- Fixed a NullPointerException in that could be triggered in the /team info command (#751, #749)- Credit Ceymikey
- Updated support for UltimateClaims to support 3.0.0+ only (#766)

Headings:
Features:

Improvements:

Bug Fixes: 
