@@ -6,6 +6,7 @@ import org.bukkit.entity.*;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityDamageByBlockEvent;
 import org.bukkit.event.entity.EntityDamageByEntityEvent;
 import org.bukkit.event.entity.PotionSplashEvent;
 import org.bukkit.potion.PotionEffect;
@@ -141,6 +142,11 @@ public class DamageManagement implements Listener {
 
 		}
 
+	}
+
+	@EventHandler(ignoreCancelled = true)
+	public void onBlockDamage(EntityDamageByBlockEvent e) {
+		e.getCause()
 	}
 
 }
